<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mybackground_gray"
    tools:context=".Views.MainActivity">

    <TextView
        android:id="@+id/enterYourNickNameTextViewLogin"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/enter_nickname_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nickNameEditTextLogin"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/nickname_hint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterYourNickNameTextViewLogin" />

    <TextView
        android:id="@+id/enterYourMasterPassTextViewLogin"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/enter_masterpass_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickNameEditTextLogin" />

    <EditText
        android:id="@+id/masterPassEditTextLogin"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/masterpass_hint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterYourMasterPassTextViewLogin" />

    <Button
        android:id="@+id/showPasswordButtonLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/myblue_200"
        android:text="@string/show_password_button_login"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masterPassEditTextLogin" />

    <TextView
        android:id="@+id/lineTextViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/separator_line"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showPasswordButtonLogin" />

    <Button
        android:id="@+id/openButtonLogin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/myorange_500"
        android:text="@string/open_button_login"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineTextViewLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>