<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mybackground_gray"
    tools:context=".Views.MyProfileActivity">

    <TextView
        android:id="@+id/editYourNickNameTextViewMyProfile"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/edit_your_nickname_myprofile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nickNameEditTextMyProfile"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/nickname_hint"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editYourNickNameTextViewMyProfile" />

    <TextView
        android:id="@+id/editYourMasterPassTextViewMyProfile"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/edit_your_masterpass_myprofile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickNameEditTextMyProfile" />

    <EditText
        android:id="@+id/masterPassEditTextMyProfile"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/masterpass_hint"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editYourMasterPassTextViewMyProfile" />

    <Button
        android:id="@+id/updateProfileButtonMyProfile"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/myorange_500"
        android:text="@string/update_profile_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masterPassEditTextMyProfile" />

    <TextView
        android:id="@+id/lineTextViewMyProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separator_line"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateProfileButtonMyProfile" />

    <TextView
        android:id="@+id/importABackUpFileTextViewMyProfile"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/import_a_backup_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineTextViewMyProfile" />

    <Button
        android:id="@+id/importBackUpButtonMyProfile"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/import_backup_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importABackUpFileTextViewMyProfile" />

    <TextView
        android:id="@+id/exportABackUpFileTextViewMyProfile"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/export_a_backup_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importBackUpButtonMyProfile" />

    <Button
        android:id="@+id/exportBackUpButtonMyProfile"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/myblue_200"
        android:text="EXPORT BACK-UP"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exportABackUpFileTextViewMyProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>