<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mybackground_gray"
    android:padding="5dp"
    tools:context=".Views.EncrypterDecrypterActivity">


    <TextView
        android:id="@+id/enterAMasterPassTextViewEncrypterDecrypter"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/enter_privatekey_encrypter_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/privateKeyEditTextEncrypterDecrypter"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/privatekey_hint_encrypter"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAMasterPassTextViewEncrypterDecrypter" />

    <TextView
        android:id="@+id/insertYourTextToBeEncryptTextViewEncrypterDecrypter"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/insert_your_text_encrypter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privateKeyEditTextEncrypterDecrypter" />

    <EditText
        android:id="@+id/inserTyourTextEncryptedMultiLineEncrypterDecrypter"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertYourTextToBeEncryptTextViewEncrypterDecrypter"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/yourTextEncryptedTextViewEncrypterDecrypter"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@color/mygreen_500"
        android:gravity="center"
        android:text="@string/your_text_encrypted_encrypter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inserTyourTextEncryptedMultiLineEncrypterDecrypter" />

    <EditText
        android:id="@+id/yourTextEncryptedMultiLineEncrypterDecrypter"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourTextEncryptedTextViewEncrypterDecrypter"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/switchEncryptDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:text="@string/encrypt_switch"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourTextEncryptedMultiLineEncrypterDecrypter" />

    <Button
        android:id="@+id/encryptDecryptButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/myLightGray"
        android:text="@string/encrypt_decrypt_button"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchEncryptDecrypt" />

</androidx.constraintlayout.widget.ConstraintLayout>